# dql-benchmark

./: .env.example  .gitignore  README.md  STATUS.md  pyproject.toml
docs/: aggregation-option-e-dry-powder.md
experiments/tau2/: README.md  _patches.py  adapter.py  determinism_probe.py  run_smoke.py
manifests/: determinism_baseline_v041d.manifest.json  pr10_fallback_regression.manifest.json  v043_swift_primary_recert.manifest.json
reports/: dql_v041d_baseline_report.md  pr10-fallback-regression.md  v043-vollrun-briefing-hermes.md
runner/: run_baseline_llm.py  run_suite.py
runs/: MANIFEST_v041c.txt  determinism_baseline_v041b.jsonl  determinism_baseline_v041c.jsonl  determinism_baseline_v041d.jsonl  report_baseline.md  report_determinism_baseline_v041b.md  report_determinism_baseline_v041c.md  report_pr2_rerun.md  report_pr3_rerun.md  report_v041a_rerun.md  report_v041b_rerun.md  report_v04_rerun.md  report_v1.md  results_baseline_claude-haiku-4.5.jsonl  results_baseline_gemini-2.5-flash-lite.jsonl  results_baseline_gpt-5.4-nano.jsonl  results_pr10_fallback_regression.jsonl  results_pr2.jsonl  results_pr3.jsonl  results_v04.jsonl  results_v041a.jsonl  results_v041b.jsonl  results_v043_swift_primary_recert_w1.jsonl  results_v043_swift_primary_recert_w3_contention.jsonl  results_v1.jsonl  suite_v11_after_v2.jsonl  suite_v11_before.jsonl
runs/reproducibility/: README.md  determinism_baseline_v041b.md  determinism_probe.json  pr2_rerun.md  pr3_rerun.md  tau2_sim_task001_results.json  tau2_task001_v1_no_marker.json  v041a_rerun.md  (+3 more)
suite/: README.md  schema.json
(+21 files in other folders)
