[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dql-tau2-eval"
version = "0.1.0"
description = "External validation of DQL v0.2 against tau2-bench (banking)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ThoughtProof Inc." }]
dependencies = [
  "httpx>=0.27",
  "anthropic>=0.40",
  "tau2-bench @ git+https://github.com/sierra-research/tau2-bench.git",
]

[project.scripts]
dql-tau2 = "dql_tau2_eval.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dql_tau2_eval*"]
